--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/admin
 spring.datasource.username=admin
 spring.datasource.password=123
 spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql=true
+logging.level.org.springframework=DEBUG
 
+
+log4j.logger.org.springframework=INFO 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
